[redis] добавлена поддержка кэширования с помощью Redis + мелкие правки